--- a/MvcNetCoreUtilidades/Views/Shared/_Layout.cshtml
+++ b/MvcNetCoreUtilidades/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UploadFiles" asp-action="SubirFile">Ficheros</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Caching" asp-action="Index">Caching</a>
+                        </li>
                     </ul>
                 </div>
             </div>
